--- a/bower.json
+++ b/bower.json
@@ -1,34 +1,35 @@
 {
-  "name": "FFP Angular Finances",
-  "version": "0.0.1",
-  "description": "FFP Angular Finances",
-  "authors": [
-    "Pablo Fernandez Flego"
-  ],
-  "license": "MIT",
-  "homepage": "https://github.com/pabloflego/ffp-angular-finances",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "devDependencies": {
-    "angular-mocks": "~1.2.24"
-  },
-  "dependencies": {
-    "angular": "~1.2.24",
-    "toastr": "~2.0.1",
-    "bootstrap": "~3.1.1",
-    "moment": "~2.6.0",
-    "jquery": "~2.1.0",
-    "angular-route": "~1.2.24",
-    "angular-animate": "~1.2.24",
-    "angular-sanitize": "~1.2.24",
-    "font-awesome": "~4.0.3",
-    "extras.angular.plus": "~0.9.0",
-    "jaydata": "~1.3.6",
-    "angular-translate": "~2.4.2"
-  }
+    "name": "FFP Angular Finances",
+    "version": "0.0.1",
+    "description": "FFP Angular Finances",
+    "authors": [
+        "Pablo Fernandez Flego"
+    ],
+    "license": "MIT",
+    "homepage": "https://github.com/pabloflego/ffp-angular-finances",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "devDependencies": {
+        "angular-mocks": "~1.2.24"
+    },
+    "dependencies": {
+        "angular": "~1.2.24",
+        "toastr": "~2.0.1",
+        "bootstrap": "~3.1.1",
+        "moment": "~2.6.0",
+        "jquery": "~2.1.0",
+        "underscore": "~1.7.0",
+        "angular-translate": "~2.4.2",
+        "angular-route": "~1.2.24",
+        "angular-animate": "~1.2.24",
+        "angular-sanitize": "~1.2.24",
+        "font-awesome": "~4.0.3",
+        "extras.angular.plus": "~0.9.0",
+        "jaydata": "~1.3.6"
+    }
 }
